--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,19 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": "src",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@features/*": ["features/*"],
+      "@layout/*": ["layout/*"],
+      "@hooks/*": ["hooks/*"],
+      "@assets/*": ["assets/*"],
+      "@type/*": ["type/*"],
+      "@pages/*": ["pages/*"],
+      "@mock/*": ["mock/*"]
+    }
   },
   "include": ["src"]
 }
